# uvpkg

./: .gitignore  README.md  pyproject.toml
src/uvpkg/: __init__.py
